--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Add your site or application content here -->
+  <!-- Title Page -->
+  <div class="titlepage">
+    <h1>PROJECT</h1><br>
+    <h1>ME</h1><br>
+    <h1>SH</h1>
+  </div>
+  
+  <ul class="mainnav">
+    <li><a href="P2">Problem Statement</a></li>
+    <li><a href="P3">About</a></li>
+    <li><a href="P4">Inspiration</a></li>
+    <li><a href="P5">Process</a></li>
+    <li><a href="P6">Final</a></li>
+    <li><a href="P7">Moving Forward</a></li>
+  </ul>
+  
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
