--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Title Page -->
   <div class="titlepage">
-    <h1>PROJECT</h1><br>
+    <h1>PROJECT</h1>
     <h1>ME</h1><br>
     <h1>SH</h1>
   </div>
