added type and formatting homepage

--- a/index.html
+++ b/index.html
@@ -23,21 +23,26 @@
   <![endif]-->
 
   <!-- Title Page -->
-  <div class="titlepage">
-    <h1>PROJECT</h1>
-    <h1>ME</h1><br>
-    <h1>SH</h1>
+  <div class="wrapper">
+    <header>
+        <div class="logo">
+          <h1 class="logo-top">PROJECT</h1><br>
+          <h1 class="logo-bott">ME</h1><br>
+          <h1 class="logo-bott">SH</h1>
+        </div>
+    </header>
+  <nav>
+    <ul>
+      <li><a href="P2">Problem Statement</a></li>
+      <li><a href="P3">About</a></li>
+      <li><a href="P4">Inspiration</a></li>
+      <li><a href="P5">Process</a></li>
+      <li><a href="P6">Final</a></li>
+      <li><a href="P7">Moving Forward</a></li>
+    </ul>
+  </nav>
+
   </div>
-  
-  <ul class="mainnav">
-    <li><a href="P2">Problem Statement</a></li>
-    <li><a href="P3">About</a></li>
-    <li><a href="P4">Inspiration</a></li>
-    <li><a href="P5">Process</a></li>
-    <li><a href="P6">Final</a></li>
-    <li><a href="P7">Moving Forward</a></li>
-  </ul>
-  
   <script src="modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
