--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <div class="wrapper">
     <header>
         <div class="logo">
-          <h1 class="logo-top">PROJECT</h1><br>
-          <h1 class="logo-bott">ME</h1><br>
-          <h1 class="logo-bott">SH</h1>
+          <h1 class="logo-top">PROJECT</h1>
+          <h1 class="logo-bott1">ME</h1><br>
+          <h1 class="logo-bott2">SH</h1>
         </div>
     </header>
   <nav>
