added font Karla and other changes

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </header>
   <nav>
     <ul>
-      <li><a href="P2">Problem Statement</a></li>
-      <li><a href="P3">About</a></li>
-      <li><a href="P4">Inspiration</a></li>
-      <li><a href="P5">Process</a></li>
-      <li><a href="P6">Final</a></li>
-      <li><a href="P7">Moving Forward</a></li>
+      <li><a href="P2">PROBLEM STATEMENT</a></li>
+      <li><a href="P3">ABOUT</a></li>
+      <li><a href="P4">INSPIRATION</a></li>
+      <li><a href="P5">PROCESS</a></li>
+      <li><a href="P6">FINAL</a></li>
+      <li><a href="P7">MOVING FORWARD</a></li>
     </ul>
   </nav>
 
