--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="main.css">
 
+  <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -56,7 +60,7 @@
         <h1 class="logo-bott2">SH</h1>
       </a>
     </div>
-    
+
   </div>
 
   <script src="modernizr-3.7.1.min.js"></script>
