added sections for remaining page links

--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
   </nav>
   </div>
 
+  <!--beginning of problem statment page-->
   <div class="wrapper">
     
   <div class="problemstatement">
     <h1 id="P2">PROBLEM STATEMENT</h1>
   </div>
     
-  <div class="logosmall">
+    <div class="logosmall">
       <a href="index.html">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
@@ -62,6 +63,87 @@
     </div>
 
   </div>
+
+  <!--beginning of about page-->
+
+  <div class="wrapper">
+    <div class="about">
+      <h1 id="P3">ABOUT</h1>
+    </div>
+
+    <div class="logosmall">
+        <a href="index.html">
+          <h1 class="logo-top">PROJECT</h1>
+          <h1 class="logo-bott1">ME</h1><br>
+          <h1 class="logo-bott2">SH</h1>
+        </a>
+      </div>
+  </div>
+
+  <!--beginning of inspiration page-->
+
+  <div class="wrapper">
+      <div class="inspiration">
+        <h1 id="P4">INSPIRATION</h1>
+      </div>
+  
+      <div class="logosmall">
+          <a href="index.html">
+            <h1 class="logo-top">PROJECT</h1>
+            <h1 class="logo-bott1">ME</h1><br>
+            <h1 class="logo-bott2">SH</h1>
+          </a>
+        </div>
+    </div>
+
+  <!--beginning of process page-->
+
+  <div class="wrapper">
+      <div class="process">
+        <h1 id="P5">PROCESS</h1>
+      </div>
+  
+      <div class="logosmall">
+          <a href="index.html">
+            <h1 class="logo-top">PROJECT</h1>
+            <h1 class="logo-bott1">ME</h1><br>
+            <h1 class="logo-bott2">SH</h1>
+          </a>
+        </div>
+    </div>
+
+  <!--beginning of final page-->
+
+  <div class="wrapper">
+      <div class="final">
+        <h1 id="P6">FINAL</h1>
+      </div>
+  
+      <div class="logosmall">
+          <a href="index.html">
+            <h1 class="logo-top">PROJECT</h1>
+            <h1 class="logo-bott1">ME</h1><br>
+            <h1 class="logo-bott2">SH</h1>
+          </a>
+        </div>
+    </div>
+
+  <!--beginning of moving forward page-->
+
+  <div class="wrapper">
+      <div class="movingforward">
+        <h1 id="P7">MOVING FORWARD</h1>
+      </div>
+  
+      <div class="logosmall">
+          <a href="index.html">
+            <h1 class="logo-top">PROJECT</h1>
+            <h1 class="logo-bott1">ME</h1><br>
+            <h1 class="logo-bott2">SH</h1>
+          </a>
+        </div>
+    </div>
+
 
   <script src="modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
