--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <![endif]-->
 
   <!-- Title Page -->
-  <div class="wrapper">
+  <section class="wrapper">
     <header>
         <div class="logo">
           <h1 class="logo-top">PROJECT</h1>
@@ -45,10 +45,10 @@
       <li><a href="#P7">MOVING FORWARD</a></li>
     </ul>
   </nav>
-  </div>
+</section>
 
   <!--beginning of problem statment page-->
-  <div class="wrapper">
+  <section class="wrapper">
     
   <div class="problemstatement">
     <h1 id="P2">PROBLEM STATEMENT</h1>
@@ -62,11 +62,11 @@
       </a>
     </div>
 
-  </div>
+  </section>
 
   <!--beginning of about page-->
 
-  <div class="wrapper">
+  <section class="wrapper">
     <div class="about">
       <h1 id="P3">ABOUT</h1>
     </div>
@@ -78,71 +78,71 @@
           <h1 class="logo-bott2">SH</h1>
         </a>
       </div>
-  </div>
+    </section>
 
   <!--beginning of inspiration page-->
 
-  <div class="wrapper">
-      <div class="inspiration">
-        <h1 id="P4">INSPIRATION</h1>
-      </div>
-  
-      <div class="logosmall">
-          <a href="index.html">
-            <h1 class="logo-top">PROJECT</h1>
-            <h1 class="logo-bott1">ME</h1><br>
-            <h1 class="logo-bott2">SH</h1>
-          </a>
-        </div>
+  <section class="wrapper">
+    <div class="inspiration">
+      <h1 id="P4">INSPIRATION</h1>
     </div>
+  
+    <div class="logosmall">
+      <a href="index.html">
+        <h1 class="logo-top">PROJECT</h1>
+        <h1 class="logo-bott1">ME</h1><br>
+        <h1 class="logo-bott2">SH</h1>
+      </a>
+    </div>
+  </section>
 
   <!--beginning of process page-->
 
-  <div class="wrapper">
-      <div class="process">
-        <h1 id="P5">PROCESS</h1>
-      </div>
-  
-      <div class="logosmall">
-          <a href="index.html">
-            <h1 class="logo-top">PROJECT</h1>
-            <h1 class="logo-bott1">ME</h1><br>
-            <h1 class="logo-bott2">SH</h1>
-          </a>
-        </div>
+  <section class="wrapper">
+    <div class="process">
+      <h1 id="P5">PROCESS</h1>
     </div>
+  
+    <div class="logosmall">
+      <a href="index.html">
+        <h1 class="logo-top">PROJECT</h1>
+        <h1 class="logo-bott1">ME</h1><br>
+        <h1 class="logo-bott2">SH</h1>
+      </a>
+    </div>
+  </section>
 
   <!--beginning of final page-->
 
-  <div class="wrapper">
-      <div class="final">
-        <h1 id="P6">FINAL</h1>
-      </div>
-  
-      <div class="logosmall">
-          <a href="index.html">
-            <h1 class="logo-top">PROJECT</h1>
-            <h1 class="logo-bott1">ME</h1><br>
-            <h1 class="logo-bott2">SH</h1>
-          </a>
-        </div>
+  <section class="wrapper">
+    <div class="final">
+      <h1 id="P6">FINAL</h1>
     </div>
+  
+    <div class="logosmall">
+      <a href="index.html">
+        <h1 class="logo-top">PROJECT</h1>
+        <h1 class="logo-bott1">ME</h1><br>
+        <h1 class="logo-bott2">SH</h1>
+      </a>
+    </div>
+  </section>
 
   <!--beginning of moving forward page-->
 
-  <div class="wrapper">
-      <div class="movingforward">
-        <h1 id="P7">MOVING FORWARD</h1>
-      </div>
-  
-      <div class="logosmall">
-          <a href="index.html">
-            <h1 class="logo-top">PROJECT</h1>
-            <h1 class="logo-bott1">ME</h1><br>
-            <h1 class="logo-bott2">SH</h1>
-          </a>
-        </div>
+  <section class="wrapper">
+    <div class="movingforward">
+      <h1 id="P7">MOVING FORWARD</h1>
     </div>
+  
+    <div class="logosmall">
+      <a href="index.html">
+        <h1 class="logo-top">PROJECT</h1>
+        <h1 class="logo-bott1">ME</h1><br>
+        <h1 class="logo-bott2">SH</h1>
+      </a>
+    </div>
+  </section>
 
 
   <script src="modernizr-3.7.1.min.js"></script>
