--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <![endif]-->
 
   <!-- Title Page -->
-  <section class="wrapper">
+  <section id="P1" class="wrapper">
     <header>
         <div class="logo">
           <h1 class="logo-top">PROJECT</h1>
@@ -37,6 +37,7 @@
     </header>
   <nav>
     <ul>
+      <li><a href="#P1">HOME</a></li>
       <li><a href="#P2">PROBLEM STATEMENT</a></li>
       <li><a href="#P3">ABOUT</a></li>
       <li><a href="#P4">INSPIRATION</a></li>
@@ -48,14 +49,14 @@
 </section>
 
   <!--beginning of problem statment page-->
-  <section class="wrapper">
+  <section id="P2" class="wrapper">
     
   <div class="problemstatement">
-    <h1 id="P2">PROBLEM STATEMENT</h1>
+    <h1>PROBLEM STATEMENT</h1>
   </div>
     
     <div class="logosmall">
-      <a href="index.html">
+      <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
@@ -66,13 +67,13 @@
 
   <!--beginning of about page-->
 
-  <section class="wrapper">
+  <section id="P3" class="wrapper">
     <div class="about">
-      <h1 id="P3">ABOUT</h1>
+      <h1>ABOUT</h1>
     </div>
 
     <div class="logosmall">
-        <a href="index.html">
+        <a href="#P1">
           <h1 class="logo-top">PROJECT</h1>
           <h1 class="logo-bott1">ME</h1><br>
           <h1 class="logo-bott2">SH</h1>
@@ -82,13 +83,13 @@
 
   <!--beginning of inspiration page-->
 
-  <section class="wrapper">
+  <section id="P4" class="wrapper">
     <div class="inspiration">
-      <h1 id="P4">INSPIRATION</h1>
+      <h1>INSPIRATION</h1>
     </div>
   
     <div class="logosmall">
-      <a href="index.html">
+      <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
@@ -98,13 +99,13 @@
 
   <!--beginning of process page-->
 
-  <section class="wrapper">
+  <section id="P5" class="wrapper">
     <div class="process">
-      <h1 id="P5">PROCESS</h1>
+      <h1>PROCESS</h1>
     </div>
   
     <div class="logosmall">
-      <a href="index.html">
+      <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
@@ -114,13 +115,13 @@
 
   <!--beginning of final page-->
 
-  <section class="wrapper">
+  <section id="P6" class="wrapper">
     <div class="final">
-      <h1 id="P6">FINAL</h1>
+      <h1>FINAL</h1>
     </div>
   
     <div class="logosmall">
-      <a href="index.html">
+      <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
@@ -130,13 +131,13 @@
 
   <!--beginning of moving forward page-->
 
-  <section class="wrapper">
+  <section id="P7" class="wrapper">
     <div class="movingforward">
-      <h1 id="P7">MOVING FORWARD</h1>
+      <h1>MOVING FORWARD</h1>
     </div>
   
     <div class="logosmall">
-      <a href="index.html">
+      <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
