--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <h1>PROBLEM STATEMENT</h1>
   </div>
     
+  <aside class="logocontainer">
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
@@ -62,6 +63,7 @@
         <h1 class="logo-bott2">SH</h1>
       </a>
     </div> 
+  </aside>
   </section>
 
   <!--beginning of about page-->
@@ -70,7 +72,7 @@
     <div class="about">
       <h1>ABOUT</h1>
     </div>
-
+<!--
     <div class="logosmall">
         <a href="#P1">
           <h1 class="logo-top">PROJECT</h1>
@@ -78,6 +80,7 @@
           <h1 class="logo-bott2">SH</h1>
         </a>
       </div>
+      -->
   </section>
 
   <!--beginning of inspiration page-->
@@ -86,7 +89,7 @@
     <div class="inspiration">
       <h1>INSPIRATION</h1>
     </div>
-  
+<!-- 
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
@@ -94,6 +97,7 @@
         <h1 class="logo-bott2">SH</h1>
       </a>
     </div>
+    --> 
   </section>
 
   <!--beginning of process page-->
@@ -102,7 +106,7 @@
     <div class="process">
       <h1>PROCESS</h1>
     </div>
- 
+<!--
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
@@ -110,7 +114,7 @@
         <h1 class="logo-bott2">SH</h1>
       </a>
     </div>
-    
+    --> 
   </section>
  
   <!--beginning of final page-->
@@ -119,7 +123,7 @@
     <div class="final">
       <h1>FINAL</h1>
     </div>
- 
+<!--
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
@@ -127,7 +131,7 @@
         <h1 class="logo-bott2">SH</h1>
       </a>
     </div>
-  
+  --> 
   </section>
  
   <!--beginning of moving forward page-->
@@ -136,7 +140,7 @@
     <div class="movingforward">
       <h1>MOVING FORWARD</h1>
     </div>
- 
+<!--
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
@@ -144,15 +148,17 @@
         <h1 class="logo-bott2">SH</h1>
       </a>
     </div>
- 
+ --> 
   </section>
 
 
   <script src="modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
   <script src="plugins.js"></script>
   <script src="main.js"></script>
+  <script src="sketch.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
