--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Project MESH</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -54,14 +54,15 @@
   <div class="problemstatement">
     <h1>PROBLEM STATEMENT</h1>
   </div>
-    
+ 
+    <!--
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
       </a>
-    </div> 
+    </div> -->
   </section>
 
   <!--beginning of about page-->
@@ -71,13 +72,14 @@
       <h1>ABOUT</h1>
     </div>
 
+    <!--
     <div class="logosmall">
         <a href="#P1">
           <h1 class="logo-top">PROJECT</h1>
           <h1 class="logo-bott1">ME</h1><br>
           <h1 class="logo-bott2">SH</h1>
         </a>
-      </div>
+      </div> -->
   </section>
 
   <!--beginning of inspiration page-->
@@ -86,14 +88,14 @@
     <div class="inspiration">
       <h1>INSPIRATION</h1>
     </div>
-  
+  <!--
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
       </a>
-    </div>
+    </div> -->
   </section>
 
   <!--beginning of process page-->
@@ -103,13 +105,14 @@
       <h1>PROCESS</h1>
     </div>
  
+    <!--
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
       </a>
-    </div>
+    </div> -->
     
   </section>
  
@@ -120,13 +123,14 @@
       <h1>FINAL</h1>
     </div>
  
+    <!--
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
       </a>
-    </div>
+    </div> -->
   
   </section>
  
@@ -137,13 +141,14 @@
       <h1>MOVING FORWARD</h1>
     </div>
  
+    <!--
     <div class="logosmall">
       <a href="#P1">
         <h1 class="logo-top">PROJECT</h1>
         <h1 class="logo-bott1">ME</h1><br>
         <h1 class="logo-bott2">SH</h1>
       </a>
-    </div>
+    </div> -->
  
   </section>
 
