--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <h1 class="logo-bott2">SH</h1>
         </div>
     </header>
+    <h2>Project MESH is an exploration of the relationship between humans and technology and other 21st century relationships.</h2>
   <nav>
     <ul>
       <li><a href="#P1">HOME</a></li>
