--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
           <h1 class="logo-bott2">SH</h1>
         </div>
     </header>
-    
+    <!--
     <div class="hook">
       <h2>Project MESH is an exploration of the relationship between humans and 
       technology and other 21st century relationships.
       </h2>
-    </div>
+    </div> -->
   <nav>
     
     <ul>
