--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
       <li><a href="#P2">PROBLEM STATEMENT</a></li>
       <li><a href="#P3">ABOUT</a></li>
       <li><a href="#P4">INSPIRATION</a></li>
-      <li><a href="#P5">PROCESS</a></li>
-      <li><a href="#P6">FINAL</a></li>
-      <li><a href="#P7">MOVING FORWARD</a></li>
+      <li><a href="#P5">RESEARCH</a></li>
+      <li><a href="#P6">PROCESS</a></li>
+      <li><a href="#P7">FINAL</a></li>
+      <li><a href="#P8">MOVING FORWARD</a></li>
     </ul>
   </nav>
 </section>
@@ -104,10 +105,27 @@
       </a>
     </div> -->
   </section>
+  
+  <!--beginning of research page-->
+  
+  <section id="P5" class="wrapper">
+    <div class="research">
+      <h1>RESEARCH</h1>
+    </div>
+  <!--
+    <div class="logosmall">
+      <a href="#P1">
+        <h1 class="logo-top">PROJECT</h1>
+        <h1 class="logo-bott1">ME</h1><br>
+        <h1 class="logo-bott2">SH</h1>
+      </a>
+    </div> -->
+  </section>
+  
 
   <!--beginning of process page-->
 
-  <section id="P5" class="wrapper">
+  <section id="P6" class="wrapper">
     <div class="process">
       <h1>PROCESS</h1>
     </div>
@@ -125,7 +143,7 @@
  
   <!--beginning of final page-->
 
-  <section id="P6" class="wrapper">
+  <section id="P7" class="wrapper">
     <div class="final">
       <h1>FINAL</h1>
     </div>
@@ -143,7 +161,7 @@
  
   <!--beginning of moving forward page-->
 
-  <section id="P7" class="wrapper">
+  <section id="P8" class="wrapper">
     <div class="movingforward">
       <h1>MOVING FORWARD</h1>
     </div>
