--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
           <h1 class="logo-bott2">SH</h1>
         </div>
     </header>
-    <!--
+   
     <div class="hook">
       <h2>Project MESH is an exploration of the relationship between humans and 
       technology and other 21st century relationships.
       </h2>
-    </div> -->
-  <nav>
+    </div>
     
+  <nav>
     <ul>
       <li><a href="#P1">HOME</a></li>
       <li><a href="#P2">PROBLEM STATEMENT</a></li>
