--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
 
   <!--beginning of problem statment page-->
   <section id="P2" class="wrapper">
-    
-  <div class="problemstatement">
-    <h1>PROBLEM STATEMENT</h1>
-  </div>
+   
+  <div id="c1" class="c1"></div>
     
   <aside class="logocontainer">
     <div class="logosmall">
@@ -155,7 +153,7 @@
   <script src="modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
+  <script src="p5.js"></script>
   <script src="plugins.js"></script>
   <script src="main.js"></script>
   <script src="sketch.js"></script>
