--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div id="c1" class="c1"></div>
     
   <div class="problemstatement">
-    <h1>PROBLEM STATEMENT</h1>
+    <h1 style="display: none;">PROBLEM STATEMENT</h1>
   </div>
  
     <!--
