Removed sketch.js functionality in HTML file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
   <!--beginning of problem statment page-->
   <section id="P2" class="wrapper">
    
+   <!-- THIS IS WHERE THE P5 BOARD GOES
   <div id="c1" class="c1"></div>
+  -->
     
   <div class="problemstatement">
     <h1>PROBLEM STATEMENT</h1>
