finalized background image

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
 <body>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+  <![endif]--
 
   <!-- Title Page -->
+  <div class="background-img">
+     <img src="mesh_linework.png">
+  </div>
+  
   <section id="P1" class="wrapper">
     <header>
         <div class="logo">
