--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header>
         <div class="logo">
           <h1 class="logo-top">PROJECT</h1>
-          <h1 class="logo-bott1">ME</h1><br>
+          <h1 class="logo-bott1">ME</h1>
           <h1 class="logo-bott2">SH</h1>
         </div>
     </header>
