editing nav bar

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <li><a href="#P5">RESEARCH</a></li>
       <li><a href="#P6">PROCESS</a></li>
       <li><a href="#P7">FINAL</a></li>
-      <li><a href="#P8">MOVING FORWARD</a></li>
+      <li class="movingforward"><a href="#P8">MOVING FORWARD</a></li>
     </ul>
   </nav>
 </section>
