fixed nav I think?

--- a/index.html
+++ b/index.html
@@ -46,18 +46,17 @@
       </h2>
     </div>
     
-  <nav>
-    <ul>
-      <li><a href="#P1">HOME</a></li>
-      <li><a href="#P2">PROBLEM STATEMENT</a></li>
-      <li><a href="#P3">ABOUT</a></li>
-      <li><a href="#P4">INSPIRATION</a></li>
-      <li><a href="#P5">RESEARCH</a></li>
-      <li><a href="#P6">PROCESS</a></li>
-      <li><a href="#P7">FINAL</a></li>
-      <li class="movingforward"><a href="#P8">MOVING FORWARD</a></li>
-    </ul>
+  <nav class="mainnav">
+      <a href="#P1">HOME</a>
+      <a href="#P2">PROBLEM STATEMENT</a>
+      <a href="#P3">ABOUT</a>
+      <a href="#P4">INSPIRATION</a>
+      <a href="#P5">RESEARCH</a>
+      <a href="#P6">PROCESS</a>
+      <a href="#P7">FINAL</a>
+      <a href="#P8">MOVING FORWARD</a>
   </nav>
+
 </section>
 
   <!--beginning of problem statment page-->
