--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <h1>INSPIRATION</h1>
     </div>
 
-    <div>
+    <div class="imagegrid">
       <a href="https://www.303gallery.com/gallery-exhibitions/doug-aitken11/press-release">
         <figure>
             <img src="images/alfredojaar.jpeg">
