--- a/index.html
+++ b/index.html
@@ -106,61 +106,77 @@
     </div>
 
     <div class="imagegrid">
-      <a href="https://www.303gallery.com/gallery-exhibitions/doug-aitken11/press-release">
-        <figure>
-            <img src="images/alfredojaar.jpeg">
-            <figcaption>Alfredo Jaar</figcaption>
-        </figure>
-      </a>
+        <div class="imagecontainer">
+          <a href="https://www.303gallery.com/gallery-exhibitions/doug-aitken11/press-release">
+            <figure>
+                <img src="images/alfredojaar.jpeg">
+                <figcaption>Alfredo Jaar</figcaption>
+            </figure>
+          </a>
+        </div>
 
-      <a href="">
-        <figure>
-            <img src="images/follower.jpg">
-            <figcaption>Follower</figcaption>
-        </figure>
-      </a>
+        <div class="imagecontainer">
+          <a href="">
+            <figure>
+                <img src="images/follower.jpg">
+                <figcaption>Follower</figcaption>
+            </figure>
+          </a>
+        </div>
 
-      <a href="">
-        <figure>
-            <img src="images/newera.jpeg">
-            <figcaption>Doug Aitken New Era</figcaption>
-        </figure>
-      </a>
+        <div class="imagecontainer">
+          <a href="">
+            <figure>
+                <img src="images/newera.jpeg">
+                <figcaption>Doug Aitken New Era</figcaption>
+            </figure>
+          </a>
+        </div>
 
-      <a href="">
-        <figure>
-            <img src="images/placeholder1.png">
-            <figcaption>Placeholder 1</figcaption>
-        </figure>
-      </a>
+        <div class="imagecontainer">
+          <a href="">
+            <figure>
+                <img src="images/placeholder1.png">
+                <figcaption>Placeholder 1</figcaption>
+            </figure>
+          </a>
+        </div>
 
-      <a href="">
-        <figure>
-            <img src="images/placeholder2.png">
-            <figcaption>Placeholder 2</figcaption>
-        </figure>
-      </a>
-      
-      <a href="">
-        <figure>
-            <img src="images/placeholder3.png">
-            <figcaption>Placeholder 3</figcaption>
-        </figure>
-      </a>
+        <div class="imagecontainer">
+          <a href="">
+            <figure>
+                <img src="images/placeholder2.png">
+                <figcaption>Placeholder 2</figcaption>
+            </figure>
+          </a>
+        </div>
 
-      <a href="">
-        <figure>
-            <img src="images/posttextfuture.jpg">
-            <figcaption>Post Text Future</figcaption>
-        </figure>
-      </a>
+        <div class="imagecontainer">
+          <a href="">
+            <figure>
+                <img src="images/placeholder3.png">
+                <figcaption>Placeholder 3</figcaption>
+            </figure>
+          </a>
+        </div>
 
-      <a href="">
-        <figure>
-            <img src="images/YDESIA.jpg">
-            <figcaption>You Don't Even Notice It Anymore</figcaption>
-        </figure>
-      </a>
+        <div class="imagecontainer">
+          <a href="">
+            <figure>
+                <img src="images/posttextfuture.jpg">
+                <figcaption>Post Text Future</figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="imagecontainer">
+          <a href="">
+            <figure>
+                <img src="images/YDESIA.jpg">
+                <figcaption>You Don't Even Notice It Anymore</figcaption>
+            </figure>
+          </a>
+        </div>
     </div>
   
   </section>
