added/removed images and fixing image grid

--- a/index.html
+++ b/index.html
@@ -108,73 +108,73 @@
     <div class="imagegrid">
         <div class="imagecontainer">
           <a href="https://www.303gallery.com/gallery-exhibitions/doug-aitken11/press-release">
-            <figure>
-                <img src="images/alfredojaar.jpeg">
-                <figcaption>Alfredo Jaar</figcaption>
-            </figure>
+            <img src="images/alfredojaar.jpeg">
+            <span class="text-wrapper">
+              <span class="text">Alfredo Jaar</span>
+            </span>
           </a>
         </div>
 
         <div class="imagecontainer">
           <a href="">
-            <figure>
-                <img src="images/follower.jpg">
-                <figcaption>Follower</figcaption>
-            </figure>
+              <img src="images/follower.png">
+              <span class="text-wrapper">
+                  <span class="text">Follower</span>
+              </span>
           </a>
         </div>
 
         <div class="imagecontainer">
           <a href="">
-            <figure>
-                <img src="images/newera.jpeg">
-                <figcaption>Doug Aitken New Era</figcaption>
-            </figure>
+              <img src="images/newera.jpeg">
+              <span class="text-wrapper">
+                  <span class="text">Doug Aitken New Era</span>
+              </span>
           </a>
         </div>
 
         <div class="imagecontainer">
           <a href="">
-            <figure>
-                <img src="images/placeholder1.png">
-                <figcaption>Placeholder 1</figcaption>
-            </figure>
+              <img src="images/placeholder1.png">
+              <span class="text-wrapper">
+                  <span class="text">Placeholder 1</span>
+              </span>
           </a>
         </div>
 
         <div class="imagecontainer">
           <a href="">
-            <figure>
-                <img src="images/placeholder2.png">
-                <figcaption>Placeholder 2</figcaption>
-            </figure>
+              <img src="images/placeholder2.png">
+              <span class="text-wrapper">
+                  <span class="text">Placeholder 2</span>
+              </span>
           </a>
         </div>
 
         <div class="imagecontainer">
           <a href="">
-            <figure>
-                <img src="images/placeholder3.png">
-                <figcaption>Placeholder 3</figcaption>
-            </figure>
+              <img src="images/placeholder3.png">
+              <span class="text-wrapper">
+                  <span class="text">Placeholder 3</span>
+              </span>
           </a>
         </div>
 
         <div class="imagecontainer">
           <a href="">
-            <figure>
-                <img src="images/posttextfuture.jpg">
-                <figcaption>Post Text Future</figcaption>
-            </figure>
+              <img src="images/posttextfuture.png">
+              <span class="text-wrapper">
+                  <span class="text">Post-Text Future</span>
+              </span>
           </a>
         </div>
 
         <div class="imagecontainer">
           <a href="">
-            <figure>
-                <img src="images/YDESIA.jpg">
-                <figcaption>You Don't Even Notice It Anymore</figcaption>
-            </figure>
+              <img src="images/ydenia.png">
+              <span class="text-wrapper">
+                  <span class="text">You Don't Even Notice It Anymore</span>
+              </span>
           </a>
         </div>
     </div>
