--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <nav class="mainnav">
       <a href="#P1">HOME</a>
       <a href="#P2">THE POTENTIAL PROBLEM</a>
-      <a href="#P3">WHY TAKE NOTICE?</a>
+      <a href="#P3">WHY THINK ABOUT IT?</a>
       <a href="#P4">INSPIRATION</a>
       <a href="#P5">RESEARCH</a>
       <a href="#P6">PROCESS</a>
@@ -91,8 +91,8 @@
   <!--beginning of about page-->
 
   <section id="P3" class="wrapper">
-    <div class="notice">
-      <h1>WHY TAKE NOTICE?</h1>
+    <div class="think">
+      <h1>WHY THINK ABOUT IT?</h1>
     </div>
 
     
