added more images

--- a/index.html
+++ b/index.html
@@ -198,24 +198,10 @@
       <h1>PROCESS</h1>
     </div>
 
-    <div class="content">
-      <p>
-          During my undergraduate art program, I focused a lot on identity and how technology plays a role in 
-          forming our physical identities, not just our online identities. Over the course of my Masters program 
-          at MCAD, I have shifted my focus towards how the overuse of technology impacts our relationships, 
-          both with ourselves in shaping our identities, and our relationships with others. <br><br>
-
-          When I began creating MESH, I really wanted the name of the project to have roots in technology itself, 
-          and technology’s relationship to humans. I began thinking about how humans network with each other, and 
-          also the idea of computer networking. It struck me that this network pattern exists in many places. 
-          The massive and completely invisible infrastructure of wireless networking really fascinates me, so I 
-          started investigating recent advancements in wireless networking. One such advancement is the mesh wireless 
-          network. A mesh network is a network of wireless routers that create a highly reliable connection for a 
-          large area, like an entire home or office space. Companies like Eero and Google, among others, are producing 
-          and selling these mesh network setups to consumers. This type of wireless network intrigued me because it 
-          seemed to mirror, or actualize, the same pattern that human networks have. Our relationships and communities 
-          are built on these webs of connectedness.
-      </p>
+    <div class="processgrid">
+          <img src="images/alfredojaar.jpeg">
+          <img src="images/follower.png">
+          <img src="images/newera.jpeg">
     </div>
 
 
