--- a/index.html
+++ b/index.html
@@ -199,9 +199,23 @@
     </div>
 
     <div class="processgrid">
-          <img src="images/alfredojaar.jpeg">
-          <img src="images/follower.png">
-          <img src="images/newera.jpeg">
+        <div class="item1center">
+          <img src="process_pngs/summer_versions/mockup cover.png">
+        </div>
+          <img src="process_pngs/summer_versions/mockup spread 1 2.png">
+          <img src="process_pngs/summer_versions/mockup spread 5 6.png">
+          <img src="process_pngs/summer_versions/mockup spread 6 7.png">
+          <img src="process_pngs/summer_versions/mockup spread 10 11.png">
+    </div>
+
+    <div class="processgrid">
+      <div class="item2center">
+        <img src="process_pngs/fall_versions/mockup cover.png" >
+      </div>
+        <img src="process_pngs/fall_versions/mockup spread 1 2.png">
+        <img src="process_pngs/fall_versions/mockup spread 2 3.png">
+        <img src="process_pngs/fall_versions/mockup spread 11 12.png">
+        <img src="process_pngs/fall_versions/mockup spread 15 16.png">
     </div>
 
 
