--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@
       <h1>PROCESS</h1>
     </div>
 
+    <div class="processworkingimages">
+      <img src="process_pngs/process logos.png">
+      <img src="process_pngs/website inspiration.png">
+      <img src="process_pngs/process websites.png">
+    </div>
+
     <div class="processgrid">
         <div class="item1center">
           <img src="process_pngs/summer_versions/mockup cover.png">
