--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
     <!--beginning of final page-->
 
   <section id="P5" class="wrapper sections">
-      <div class="final">
+      <div>
         <h1>OUTCOME</h1>
       </div>
 
-      <a class="weblink" href="www.project-mesh.com" target="_blank"><h2>View Project MESH website</h2></a>
+      <a class="weblink" href="www.project-mesh.com" target="_blank"><h2>www.project-mesh.com</h2></a>
 
       <div class="slideshow-container">
 
